# personal_space_invaders

./: .clang-format  .lsan.supp  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  application.cpp  application.hpp  asset_manager.cpp  asset_manager.hpp  draw_util.cpp  draw_util.hpp  main.cpp  sdl_util.hpp  test_scene.hpp  util.cpp  util.hpp
src/app/: CMakeLists.txt  application.cpp  application.hpp  asset_manager.cpp  assets.cpp  assets.hpp  scene.cpp
src/engine/: CMakeLists.txt  assets.cpp  assets.hpp  collision.cpp  collision.hpp  core.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  input.cpp  input.hpp  scene.cpp  scene.hpp  sdl_util.hpp  sprites.cpp  sprites.hpp  text_renderer.cpp  text_renderer.hpp
src/game/: CMakeLists.txt
src/game/scenes/: CMakeLists.txt
src/game/scenes/invasion/: CMakeLists.txt  fortress.cpp  fortress.hpp  game_state.cpp  game_state.hpp  hud.cpp  hud.hpp  invader_entities.cpp  invader_entities.hpp  invaders.cpp  invaders.hpp  invasion_constants.hpp  invasion_entities.cpp  invasion_entities.hpp  invasion_scene.cpp  invasion_scene.hpp  pause_menu.cpp  pause_menu.hpp  player.cpp  player.hpp  player_entity.cpp  player_entity.hpp  scoreboard.cpp  scoreboard.hpp  text_renderer.cpp  text_renderer.hpp
src/game/scenes/main_menu/: CMakeLists.txt  main_menu.cpp  main_menu.hpp  main_menu_constants.hpp  main_menu_scene.cpp  main_menu_scene.hpp
src/util/: CMakeLists.txt  draw_util.cpp
web-dist/: .gitignore  index.html
